# local-compute

./: .gitignore  Cargo.toml  CompileSampleLibs.ps1  README.md  TODO.md  local-compute.code-workspace
ext/: README.md
ext/src/: bad_adder.rs  good_adder.rs
src/: lib.rs
src/core/: mod.rs
src/core/manager/: cfm.rs  mod.rs
src/core/server/: axum_hello.rs  axum_server.rs  hyper_server.rs  mod.rs  warp_server.rs
src/core/types/: func.rs  input.rs  mod.rs  output.rs  req.rs  resp.rs  status.rs  targets.rs
src/core/types/error/: app_error.rs  bad_input.rs  bad_req.rs  loading.rs  mod.rs  unloading.rs
src/dynamic_libs/: mod.rs
src/functions/: logger.rs  mod.rs
src/util/: hashing.rs  mod.rs
