[package]
authors = ["Tony B. <tonyb983@gmail.com>"]
categories = ["hobby", "bad-code"]
description = "Playing around with writing a simple server that recreates cloud function capability."
edition = "2021"
keywords = ["hobby", "just-for-fun", "do-not-use"]
license-file = "LICENSE"
name = "local-compute"
repository = "https://github.com/tonyb983/local-compute"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
axum = "0.4.5"
chrono = { version = "0.4.19", features = ["serde"] }
hyper = "0.14.17"
lazy_static = "1.4.0"
libloading = "0.7.3"
seahash = "4.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
warp = "0.3.2"
